Update works on Mac. It took literally forever to get working...